# warc2zim

./: .coveragerc  .eslintrc.json  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  build_js.sh  hatch_build.py  openzim.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: Publish.yaml  PublishDockerDevImage.yaml  QA.yaml  TestWebsite.yaml  Tests.yaml  ci.yaml  release.yaml
contrib/: cleanup_log.py  html_convert.py  marxists.org.py
docs/: functional_architecture.md  software_architecture.md  technical_architecture.md
javascript/: .eslintrc.json  .prettierignore  eslint.config.js  package.json  rollup.config.dev.js  rollup.config.js  rollup.config.prod.js
javascript/src/: wombatSetup.js
javascript/test/: fuzzyRules.js  wombatSetup.js  wombatUrlRewriting.js
rules/: generate_rules.py  rules.json  rules.yaml
src/warc2zim/: VERSION  __about__.py  constants.py  content_rewriting.py  converter.py  icon_finder.py  items.py  language.py  main.py  rewriting.py  url_rewriting.py  utils.py
src/warc2zim/cdxj_indexer/: __init__.py  amf.py  bufferiter.py  main.py  postquery.py
src/warc2zim/content_rewriting/: __init__.py  css.py  ds.py  generic.py  html.py  js.py  rx_replacer.py
src/warc2zim/locale/fr/LC_MESSAGES/: messages.po
src/warc2zim/replay/: index.html  load.js  notFoundPage.html  redirLive.html  topFrame.html  viewer.html
src/warc2zim/statics/: __wb_module_decl.js  wombat.js  wombat_setup.js
src/warc2zim/templates/: 404.html  head_insert.html  index.html  load.js  sw.js  sw_check.html  topFrame.html  wombat_setup.js
test-website/: Caddyfile  Dockerfile  README.md  bad-encoding.html  chinese-encoding.html  css-broken-file.css  css-broken-file.html  dailymotion.html  entrypoint-reverse.sh  entrypoint.sh  full.html  index.html  instagram.html  soundcloud.html  spotify.html  twitter2.html  url-encoding.html  youtube.html
test-website/content/: audio.html  bad-redirections.html  base-href.html  css-inline-broken.html  double-slash.html  facebook1.html  facebook2.html  form-get-1.html  form-get-2.html  form-get-3.html  form-get-4.html  form-get.html  full.html  http-equiv-redirect.html  http-return-codes.html  image-srcset.html  index.html  instagram.html  internal_redirect_target.html  javascript.html  jàvàscrïpt.html  mediaelement.html  onxxx.html  redirection-loops.html  tiktok.html  twitch1.html  twitch2.html  twitter1.html  url-encoding.html  video.html  vimeo.html
test-website/content/base-href/: something.html
test-website/content/content-types/: content1.json  index.html  script1.js  script2.js  style1.css  style2.css
test-website/content/href-to-folder/: index.html
test-website/content/icons/: site.webmanifest
test-website/content/javascript/: cont!nt.txt  résources.js  script02!b.js  script02.js  script02a.js  script03.js  script04.js  script05.js  script06a.js  script06b.js  script06c.js  script06d.js  script06e.js  script06f.js  script06g.js  script06h.js  script06i.js  script06j.js  script07.js  script08a.js  script08b.js  script08c.js  script09a.js  script09b.js  script09c.js  script09d.js  script10.js
test-website/jédéacçents.oviles.info/: README.md  image.php
tests/: conftest.py  test_converter.py  test_css_rewriting.py  test_fuzzy_rules.py  test_html_rewriting.py  test_icon_finder.py  test_js_rewriting.py  test_language.py  test_metadata_validation.py  test_rewriting.py  test_url_rewriting.py  test_utils.py  test_warc_to_zim.py  utils.py
tests/cdxj_indexer/: test_indexer.py  test_postappend.py
tests/cdxj_indexer/data/: post-test-more.warc
tests/data/: example-utf8.warc  example-with-timestamp.warc  self-redirect.warc  single-page-test.warc
tests/data-special/: icons.html
tests/encodings/: definition.json  file01.js  file02.js  file03.html  file04.js  file05.js  file07.html  file08.js
warc2zim/: main.py
